src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>SUPPLIES_Sales_Order_Number__c</fullName>
        <inlineHelpText>If a sales order number is not available at the time of creation, please indicate this in the field and add the number when available.</inlineHelpText>
        <label>Sales Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Sample_Request_Date__c</fullName>
        <label>Sample Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Samples_Received_Date__c</fullName>
        <label>Samples Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Similar_Duplicate_Case__c</fullName>
        <label>Similar/Duplicate Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Subject_Formula__c</fullName>
        <description>Custom Case Subject formula, used to standardize Case subject specifically for Supplies Cases</description>
        <formula>Text(Priority)&amp; &quot; - &quot; &amp; Account.Name &amp; &quot; - &quot; &amp; Text(SUPPLIES_Complaint_Subject__c) &amp; &quot; - &quot; &amp; Text(SUPPLIES_Warehouse__c) &amp; &quot; - &quot; &amp; SUPPLIES_Sales_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplies Quality Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Supplies_Case_Close_Date__c</fullName>
        <label>Quality Case Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Supplies_Product_Type__c</fullName>
        <label>Supplies Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Zip Ship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barcode Ribbons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wristbands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Ribbon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Total_Credit_Due__c</fullName>
        <label>Total Credit Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Total_Estimated_Value__c</fullName>
        <label>Total Estimated Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Total_Qty_Non_Conforming__c</fullName>
        <formula>SUPPLIES_Item_1_Qty_Non_Conforming__c + SUPPLIES_Item_2_Qty_Non_Conforming__c + SUPPLIES_Item_3_Qty_Non_Conforming__c + SUPPLIES_Item_4_Qty_Non_Conforming__c + SUPPLIES_Item_5_Qty_Non_Conforming__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Qty Non-Conforming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Total_Quantity_Ordered__c</fullName>
        <formula>SUPPLIES_Order_Qty_Item_1__c + SUPPLIES_Order_Quantity_Item_2__c  +  SUPPLIES_Order_Quantity_Item_3__c  +  SUPPLIES_Order_Quantity_Item_4__c +  SUPPLIES_Order_Quantity_Item_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Quantity Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Tracking_Numbers__c</fullName>
        <label>Tracking Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Vendor__c</fullName>
        <label>Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Apvion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avery Dennison/Fasson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluestar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citadel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crown Roll Leaf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diecraft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexcon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexo Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flowery Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iimak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITW Covid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITW Image Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kanzaki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kic Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSH Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MacTac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester Molding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McAllen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nastar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NewBold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Paper Tube</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Warehouse__c</fullName>
        <label>Warehouse</label>
        <picklist>
            <picklistValues>
                <fullName>Atlanta, GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenville, WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McAllen, TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego, CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vernon Hills, IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heerenveen, NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preston, UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Zebra_Sales_Representative__c</fullName>
        <label>Zebra Sales Representative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplies_Overall_Status_Chevron__c</fullName>
        <formula>IF( NOT ISNULL(ClosedDate), IMAGE(&quot;/resource/Supplies_Cases_Closed&quot;, &quot;Closed&quot;), IF(TEXT(Status)=&quot;New Supplies Quality Case&quot;, IMAGE(&quot;/resource/Supplies_Cases_New&quot;, &quot;New&quot;),  IF(TEXT(Status)=&quot;Quality Closed&quot;, IMAGE(&quot;/resource/Supplies_Cases_QualityClosed&quot;, &quot;Quality Closed&quot;), IMAGE(&quot;/resource/Supplies_Cases_QualityWorking&quot;, &quot;Quality Still Working&quot;)) ) )</formula>
        <label>Supplies - Overall Status Chevron</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplies_Product_Sub_Type__c</fullName>
        <label>Product Sub-Type</label>
        <picklist>
            <controllingField>SUPPLIES_Supplies_Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Ribbons Custom Tabletop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ribbons Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ribbons Stock Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ribbons Stock Tabletop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Ribbons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Ribbons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Laser Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels Custom Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels Custom Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels Custom Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels Custom TableTop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Kits Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barcode Supplies Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Cartridge Wristband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Desktop Wristband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Laser Wristbands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Mobile Wristband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Other Wristbands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stk TableTop Wristband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Desktop Wristbands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Laser Wristbands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Other Wristbands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels Stock Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels Stock Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels Stock Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels Stock Tabletop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Labels Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Labels Tabletop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Since_Last_Email_Sent_Hours__c</fullName>
        <formula>ZEB_Time_Since_Last_Email_Sent__c / 60</formula>
        <label>Time Since Last Email Sent (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer_Business_Days__c</fullName>
        <formula>Time_With_Customer__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time With Customer (Business Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Close__c</fullName>
        <description>Time to Close in number of days</description>
        <formula>ClosedDate  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_with_Support_Business_Days__c</fullName>
        <formula>Time_With_Support__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time with Support (Business Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_from_last_modified_to_current_time__c</fullName>
        <formula>NOW()  -  LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total from last modified to current time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZEB_Account_Type__c</fullName>
        <formula>TEXT(Account.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Affected_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>If more than 1 printer is affected by this Case, please indicate it here.</description>
        <inlineHelpText>If more than 1 printer is affected by this Case, please indicate it here.</inlineHelpText>
        <label>Affected Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZEB_Affected_Region__c</fullName>
        <label>Affected Region</label>
        <picklist>
            <picklistValues>
                <fullName>NALA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZEB_Alert_Quality__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this box to send the details of this Case to the Global Quality Team</description>
        <inlineHelpText>Tick this box to send the details of this Case to the Global Quality Team</inlineHelpText>
        <label>Alert Quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZEB_Box_com_URL__c</fullName>
        <label>Box.com URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZEB_Bug_or_Enhancement__c</fullName>
        <description>This field shows the Quality Bug or Enhancement reference</description>
        <inlineHelpText>This field shows the Quality Bug or Enhancement reference</inlineHelpText>
        <label>Bug or Enhancement</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_CQC_BImpact__c</fullName>
        <label>Potential Business Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZEB_CQC_CustImpact__c</fullName>
        <label>Customer Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZEB_CQC_Frequency__c</fullName>
        <label>Frequency of Occurrence</label>
        <picklist>
            <picklistValues>
                <fullName>After a specific amount of prints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After a specific amount of time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randomly / Inconsistently</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZEB_CQC_IBCount__c</fullName>
        <label>Install Base Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZEB_CQC_Impact__c</fullName>
        <description>Calculates the customer impact field value against the zebra business impact field value to give the CQC overall impact and auto generate that case field</description>
        <formula>CASE( 1,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Critical&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Critical&quot;),1,0),&quot;Critical&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Critical&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;High&quot;),1,0),&quot;Critical&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;High&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Critical&quot;),1,0),&quot;Critical&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Medium&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Critical&quot;),1,0),&quot;Critical&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Low&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Critical&quot;),1,0),&quot;Critical&quot;,

IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Critical&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Medium&quot;),1,0),&quot;High&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;High&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;High&quot;),1,0),&quot;High&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;High&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Medium&quot;),1,0),&quot;High&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Medium&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;High&quot;),1,0),&quot;High&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Low&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;High&quot;),1,0),&quot;High&quot;,


IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Critical&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Low&quot;),1,0),&quot;Medium&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;High&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Low&quot;),1,0),&quot;Medium&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Medium&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Medium&quot;),1,0),&quot;Medium&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Low&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Medium&quot;),1,0),&quot;Medium&quot;,

IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Medium&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Low&quot;),1,0),&quot;Low&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Low&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Low&quot;),1,0),&quot;Low&quot;,

IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;None&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Critical&quot;),1,0),&quot;None&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;None&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;High&quot;),1,0),&quot;None&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;None&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Medium&quot;),1,0),&quot;None&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;None&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;Low&quot;),1,0),&quot;None&quot;,

IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Critical&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;None&quot;),1,0),&quot;None&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;High&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;None&quot;),1,0),&quot;None&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Medium&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;None&quot;),1,0),&quot;None&quot;,
IF(ISPICKVAL(ZEB_CQC_CustImpact__c, &quot;Low&quot;) &amp;&amp; ISPICKVAL(ZEB_Severity_Rating__c, &quot;None&quot;),1,0),&quot;None&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CQC Overall Impact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_CQC_OpCon__c</fullName>
        <label>Working/Environment Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>General Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail &amp; Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation &amp; Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot / Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (see notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZEB_CQC_Project_Status__c</fullName>
        <label>CQC Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure Mode/Root Cause Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrective Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAD - Works As Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZEB_Case_Age_in_Business_Days__c</fullName>
        <formula>Case_Age_In_Business_Hours__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age in Business Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZEB_Case_Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZEB_Case_Email_Grouping_APAC__c</fullName>
        <description>Custom Formula for use in APAC reports</description>
        <formula>IF( ISBLANK(Case_Created_by_Role__c) ,  
	IF( ISPICKVAL(Origin, &quot;TS APAC email&quot;), &quot;ROA&quot;,  
		IF( ISPICKVAL(Origin,&quot;TS CN email&quot;), &quot;China&quot;, &quot;&quot;) 
	) ,  
	IF( Case_Created_by_Role__c = &quot;Technical Support Rep (APAC)&quot;, &quot;ROA&quot;,  
		IF(Case_Created_by_Role__c = &quot;Technical Support Rep (China)&quot;, &quot;China&quot;, 
                IF(Case_Created_by_Role__c = &quot;Technical Support Level 2 (APAC)&quot;, &quot;ROA&quot;,
                IF(Case_Created_by_Role__c = &quot;Technical Support Level 2 (China)&quot;, &quot;China&quot;,
                IF(Case_Created_by_Role__c = &quot;HelpDesk (APAC)&quot;, &quot;ROA&quot;,
			IF(Case_Created_by_Role__c = &quot;Supervisor Technical Support (China)&quot;, &quot;China&quot;, 
				IF(Case_Created_by_Role__c = &quot;Supervisor Technical Support (APAC)&quot;, &quot;ROA&quot;, &quot;&quot;)
			) 
		) 
	)
)
)
)
)</formula>
        <inlineHelpText>Custom Formula for use in APAC reports</inlineHelpText>
        <label>Case Grouping APAC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Case_Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>US - Barcode Level 1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>US - Barcode Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - Barcode Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - Card Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - Card Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - Card Level 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZEB_Case_Organization_Image__c</fullName>
        <formula>IF( Case_Organization__c = &apos;Zebra NALA&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004EE8p&amp;oid=00D560000008iX6&quot;, &quot;Zebra NALA&quot;), 
IF( Case_Organization__c = &apos;Zebra EMEA&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004EE99&amp;oid=00D560000008iX6&quot;, &quot;Zebra EMEA&quot;), IF( Case_Organization__c = &apos;Zebra APAC USD&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004EE9J&amp;oid=00D560000008iX6&quot;, &quot;Zebra APAC USD&quot;), IF( Case_Organization__c = &apos;Zebra APAC RMB&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004EE9d&amp;oid=00D560000008iX6&quot;, &quot;Zebra APAC RMB&quot;), null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Case_Owner_Reference__c</fullName>
        <formula>IF( LEFT(OwnerId , 3) = &apos;005&apos; , Owner:User.FirstName + &apos; &apos; + Owner:User.LastName, IF( LEFT(OwnerId , 3) = &apos;00G&apos; , Owner:Queue.Name, null) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Case_Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Case_Sorter_Formula_APAC__c</fullName>
        <formula>IF( OwnerId =  $User.Id , &quot;A&quot;+ TEXT(ROUND(ZEB_Time_Since_Last_Email_Received_Hours__c,0)) ,  
	IF(  Account.Name = &quot;Zebra Internal&quot; , &quot;B&quot;+ TEXT(ROUND(ZEB_Time_Since_Last_Email_Received_Hours__c,0)), 
		IF(  ISPICKVAL(Account.Account_Type__c,&quot;Partner&quot;), &quot;C&quot;+ TEXT(ROUND(ZEB_Time_Since_Last_Email_Received_Hours__c,0)), 
			IF(  ISPICKVAL(Account.Account_Type__c,&quot;Non Classified Reseller&quot;), &quot;D&quot;+ TEXT(ROUND(ZEB_Time_Since_Last_Email_Received_Hours__c,0)),
				IF(  ISPICKVAL(Account.Account_Type__c,&quot;End User&quot;), &quot;E&quot;+ TEXT(ROUND(ZEB_Time_Since_Last_Email_Received_Hours__c,0)),
					&quot;F&quot;+ TEXT(ROUND(ZEB_Time_Since_Last_Email_Received_Hours__c,0))
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Sorter APAC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Case_Status_Change_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Counts the total number of times the Case status was set. Used for reporting.</description>
        <label>Case Status Change Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZEB_Case_Status_Flag__c</fullName>
        <formula>IMAGE( 
CASE(  Status , 
&quot;Closed&quot;, &quot;/img/func_icons/util/checkmark16.gif&quot;,
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Case_Summary_ISV__c</fullName>
        <label>Case Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZEB_Communication_Type__c</fullName>
        <label>PC Communication Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bluetooth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Wired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parallel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZEB_Contact_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Contractual_Violations_Explanation__c</fullName>
        <label>Contractual Violations Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZEB_Contractual_Violations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractual Violations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZEB_Eng_Activity_Status__c</fullName>
        <label>Eng Activity Status</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZEB_FCR_Flag__c</fullName>
        <formula>IF((ISPICKVAL(Status, &quot;Closed&quot;)) &amp;&amp;  ZEB_Case_Status_Change_Count__c &lt;=2, &quot;FCR&quot;, &quot;Non-FCR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCR_Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_FW_SW_Version__c</fullName>
        <label>FW/SW Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_First_Email_Respond_Date__c</fullName>
        <inlineHelpText>Shows the respond date to the first email.</inlineHelpText>
        <label>First Email Respond Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZEB_Global_Alert__c</fullName>
        <description>This field shows the Global Alert reference</description>
        <inlineHelpText>This field shows the Global Alert reference</inlineHelpText>
        <label>Global Alert</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_How_to_Reproduce_Failure__c</fullName>
        <label>How to Reproduce Failure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>